--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,96 @@
   <head>
     <title>Photogram</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    
+    <style>
+    
+    .posts-wrapper {
+      padding-top: 40px;
+      margin: 0 auto;
+      max-width: 642px;
+      width: 100%;
+    }
 
+    .post {
+      background-color: #fff;
+      border-color: #edeeee;
+      border-style: solid;
+      border-radius: 3px;
+      border-width: 1px;
+      margin-bottom: 60px;
+    }
+
+    .post-head {
+      height: 64px;
+      padding: 14px 20px;
+      color: #125688;
+      font-size: 15px;
+      line-height: 18px;
+
+    .thumbnail {}
+
+    }
+
+    .name {
+        display: block;
+      }
+
+
+    .image {
+      border-bottom: 1px solid #eeefef;
+      border-top: 1px solid #eeefef;
+    }
+    .img-rounded {
+      width: 100%;
+      height: 100%;
+    }
+    .caption {
+      padding: 24px 24px;
+      font-size: 15px;
+      line-height: 18px;
+
+    }
+
+
+    
+    </style>
+    
+  </head>
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-default">
+      <div class="navbar-container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            <%= link_to "Photogram", root_path %>
+          </div>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <% if model_signed_in? %>
+              <li>
+                <%= link_to "New Post", new_post_path %>
+              </li>
+              <li>
+                <%= link_to 'Logout', destroy_model_session_path %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to "Login", new_model_session_path %>
+              </li>
+               
+            <% end %>  
+          </ul>
+        </div>
+      </div>
+    </nav>
+  	<%= yield %>
   </body>
+  <div class="container">
+    <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, class: [:alert, alert_for(name)] %>
+    <% end %>
+  </div>
+
 </html>
