--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,30 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
     <style>
     
+    .heading {
+      font-family: "Times New Roman";
+      font-size: 1.5em;
+    }
+
+    .heading :link {
+      text-decoration: none;
+    }
+
+    .iim {
+      width: 100%;
+      height: auto;
+    }
+
+    .row {
+      margin: 0;
+    }
+
+    .form-group {
+      margin: 0;
+    }
+
     .posts-wrapper {
       padding-top: 40px;
       margin: 0 auto;
@@ -52,11 +73,11 @@
       padding: 24px 24px;
       font-size: 15px;
       line-height: 18px;
-
     }
 
-
-    
+    .wid {
+      width: 50%;
+    }
     </style>
     
   </head>
@@ -64,22 +85,31 @@
     <nav class="navbar navbar-default">
       <div class="navbar-container">
         <div class="navbar-header">
-          <div class="navbar-brand">
-            <%= link_to "Photogram", root_path %>
+          <div class="navbar-brand heading">
+            <%= link_to root_path do %>
+              <i class="glyphicon glyphicon-align-left glyphicon-modal-window"></i>
+            <% end %>
+            &nbsp;
+            <%= link_to root_path do %>
+              &nbsp;Photogram
+            <% end %>
           </div>
         </div>
         <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <% if model_signed_in? %>
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to "Welcome "+current_user.user_name, root_path %>
+              </li>
               <li>
                 <%= link_to "New Post", new_post_path %>
               </li>
               <li>
-                <%= link_to 'Logout', destroy_model_session_path %>
+                <%= link_to 'Logout', destroy_user_session_path %>
               </li>
             <% else %>
               <li>
-                <%= link_to "Login", new_model_session_path %>
+                <%= link_to "Login", new_user_session_path %>
               </li>
                
             <% end %>  
