--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,24 +1,20 @@
-
-
-<div class="text-center">
-  <%= image_tag @post.image.url(:medium) %>
-</div>
-<div class="form-wrapper">
-  <%= simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f| %>
-    <div class="form-group">
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+  <%= image_tag @post.image.url(:medium), class: "iim" %>
+  </div>
+<div class="col-md-12 form-wrapper">
+  <br/><br/>
+  <%= simple_form_for @post, html: { multipart: true } do |f| %>
+    <div class="form-group" style=" margin-left: 15px; color: darkred">
       <%= f.input :image %>
     </div>
     <div class="form-group text-center">
       <%= f.input :caption %>
     </div>
+    <br/>
     <div class="form-group text-center">
       <%= f.button :submit, class: 'btn-success' %>
     </div>
   <% end %>
 </div>
-
-
-
-
-
-
+</div>
