--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,16 +4,17 @@
   <% @posts.each do |post| %>
     <div class="post">
       <div class="post-head">
-        <div class="name">
-          <%= post.model.user_name %>
+        <div class="name" style="color: solid black">
+          <%= post.user.user_name %>
         </div>
       </div>
       <div class="image center-block">
         <%= link_to (image_tag post.image.url(:medium), class:'img-rounded'), post_path(post) %>
       </div>
       <p class="caption">
-        <%= post.caption %> 
-
+        <span style="color: #1c94e0; font-family: Verdana"><%= post.caption %></span>
+        <br/>
+        <span style="font-size: 12px"><%= time_ago_in_words(post.created_at) %> ago...</span>
       </p>
     </div>  
   <% end %>
