--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,16 @@
 <div class="form-wrapper">
-  <%= simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f| %>
-    <div class="form-group">
+  <%= simple_form_for @post, html: { multipart: true } do |f| %>
+    <div class="form-group" style="display: fixed; margin-left: 15px; color: darkred">
       <%= f.input :image %>
+      <br/>
+    <div class="form-group text-center" style="display:solid black; color: black">
+      <br/><br/><br/>
+      <%= f.label :caption %>
+      <br/>
+      <%= f.text_field :caption, class: "wid" %>
     </div>
     <div class="form-group text-center">
-      <%= f.input :caption %>
-    </div>
-    <div class="form-group text-center">
+    <br/>
       <%= f.button :submit, class: 'btn-success' %>
     </div>
   <% end %>
