--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,24 @@
+<div class="edit-links pull-left">
+  <%= link_to "Go Back", posts_path, class: "btn btn-default btn-warning" %>
+</div>
+<div class="edit-links pull-right">
+  <%= link_to "Edit Post", edit_post_path(@post), class: "btn btn-default btn-success" %>
+  <%= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "btn btn-default btn-danger" %>
+</div>
+
 <div class="posts-wrapper row">
   <div class="post">
     <div class="post-head">
       <div class="name">
-        Ben Walker
+        <% current_user.user_name %>
       </div>
     </div>
+
     <div class="image center-block">
-      <%= image_tag @post.image.url(:medium) %>
+      <%= image_tag @post.image.url(:medium), class:"iim" %>
     </div>
     <p class="caption">
-      <%= @post.caption %>
-    </p>
-    
+      <span style="color: #1c94e0; font-family: Verdana"><%= @post.caption %></span>
+    </p>    
   </div>
-</div>
-
-
-
-<div class="text-center edit-links">
-  <%= link_to "Cancel", posts_path %>
-  |
-  <%= link_to "Edit Post", edit_post_path(@post) %>
-</div>
-
-
-<div class="text-center edit-links">
-  <%= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
 </div>
